<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/neu_gemini_bg_fullscreen"
    android:orientation="vertical"
    android:paddingBottom="20dip"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="24dip" >

    <ImageButton
        android:id="@+id/radio_band_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/neu_gemini_radio_fm" />

    <ImageButton
        android:id="@+id/radio_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/neu_gemini_off_btn_bg"
        android:src="@drawable/neu_gemini_off_btn" />

    <RelativeLayout
        android:id="@+id/radio_band_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_band_switch"
        android:layout_marginLeft="107dp"
        android:layout_marginRight="106dp"
        android:layout_marginTop="43dp" >

        <Button
            android:id="@+id/radio_auto_select_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/neu_gemini_auto_btn_previous" />

        <Button
            android:id="@+id/radio_auto_select_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/neu_gemini_auto_btn_next" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/radio_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="78dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/radio_stereo_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:src="@drawable/neu_gemini_stereo_icon"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/radio_frequency_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mhz"
                    android:textColor="@android:color/white"
                    android:textSize="36dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/radio_band_search"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_below="@id/radio_band_current" >

        <RelativeLayout
            android:id="@+id/radio_ruler_layout"
            android:layout_width="595dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/radio_ruler_bg"
                android:layout_width="595dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/neu_gemini_fm_scale" />

            <SeekBar
                android:id="@+id/radio_seekBar"
                android:layout_width="530dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="51dp"
                android:max="205"
                android:progressDrawable="@drawable/neu_gemini_seekbar_style"
                android:thumb="@drawable/neu_gemini_radio_thumb"
                android:thumbOffset="16dp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/radio_manual_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="45dp"
            android:background="@drawable/neu_gemini_manual_btn_previous" />

        <ImageButton
            android:id="@+id/radio_manual_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="45dp"
            android:background="@drawable/neu_gemini_manual_btn_next" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/radio_band_list"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_below="@id/radio_band_search"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <GridView
            android:id="@+id/radio_fm_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:numColumns="6"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:scrollbars="none"
            android:verticalSpacing="12dp" />

        <GridView
            android:id="@+id/radio_am_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:numColumns="6"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:scrollbars="none"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/radio_band_save"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_below="@+id/radio_band_list"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/radio_icon_light"
        android:gravity="center_vertical"
        android:text="@string/save_message"
        android:textColor="@color/preset_gray"
        android:textSize="24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_below="@id/radio_band_save"
        android:layout_gravity="bottom"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/radio_scan_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/radio_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/neu_gemini_scan_btn" />

            <TextView
                android:id="@+id/scan_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:text="@string/scan"
                android:textColor="@color/common_white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_toRightOf="@id/radio_scan_layout"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/radio_auto_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/neu_gemini_asel_btn" />

            <TextView
                android:id="@+id/auto_select_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/asel"
                android:textColor="@color/common_white"
                android:textSize="20dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>